--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header{
 }
 
 section{
-    padding: 100px 200px;   
+    padding: 100px 150px;   
 }
 
 .main{
@@ -98,6 +98,7 @@ section{
     color: white;
     font-size: 1.7em;
     padding-right: 30px;
+    text-decoration: none;
 }
 
 .title{
@@ -201,4 +202,151 @@ section{
 .More-Details:hover{
     text-decoration: none;
     color:blueviolet;
+}
+
+.footer{
+    background-color: #000016;
+    color: white;
+    padding: 2em;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.footer p{
+    font-size: 1.3em;
+    font-weight: 600;
+}
+
+.footer p span{
+    color: #3a6cf4;
+}
+
+@media (max-width:908px){
+    header{
+        padding: 12px 20px;
+    }
+
+    .nav a{
+        padding-left: 10px;
+    }
+
+    .title{
+        font-size: 1.8em;
+    }
+
+    section{
+        padding: 80px 20px;   
+    }
+    .logo{
+        font-size: 2em
+    }
+    
+    .nav a{
+        display: none;
+    }
+
+    .text-main{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .main h2{
+        color: white;
+        font-size: 1.2em;
+        font-weight: 500;
+        text-align: center;
+    }
+    .main h2 span{
+        color: #3a6cf4;
+        font-size: 3em;
+        font-weight:900;
+        display: inline-block;
+        margin-top: 10px;
+        line-height: 50px;
+    }
+    
+    .main h3{
+        color: white;
+        font-size: 2em;
+        font-weight: 700;
+        letter-spacing: 1px;
+        margin-top: 10px;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+    
+    .botn{
+        display: flex;
+        justify-content: center;
+        
+    }
+    
+    .socail-icons{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .socail-icons a{
+        color: white;
+        font-size: 1.7em;
+        padding-right: 15px;
+        padding-left: 15px;
+        text-decoration: none;
+    }
+
+    .content{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .project-card{
+        background-color: white;
+        border: 1px solid white;
+        min-height: 10em;
+        width: 10em;
+        overflow: hidden;
+        border-radius: 10px;
+        margin: 20px auto;
+        transition: 0.7s ease;
+    }
+    /*  */
+    
+    
+    .project-info{
+        padding: .3em;
+    }
+    
+    .project-info .project-text-1{
+        font-size: 0.8em;
+        color: black;
+    }
+    
+    .project-info .project-text-2{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-transform: uppercase;
+        font-weight: 800;
+        margin-top: 10px;
+        text-decoration: none;
+    }
+    
+    .More-Details{
+        text-decoration: none;
+        color:#3a6cf4;
+    }
+}
+
+@media (max-width :641px){
+    body{
+        font-size: 12px;
+    }
+}
+@media (max-width :300px){
+    body{
+        font-size: 10px;
+    }
 }
